Finalizando validação de formulário e adicionando estilo

--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -1,17 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;700&display=swap');
+@import url('./reset.css');
+@import url('./variables.css');
+
 html {
-    background-color: #eee;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    margin: 0;
-    padding: 0;
+    background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 79%);
 }
 
 .container {
-    background-color: white;
+    background-color: var(--white);
     padding: 40px;
-    border-radius: 20px;
+    border-radius: var(--20-px);
+    max-width: var(--bold-font-n-width);
+    max-height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 .flex {
@@ -19,23 +27,108 @@ html {
     flex-direction: column;
 }
 
-.input {
-    margin: 6px 0;
+.form-sign-up {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
 }
 
-.input label {
-    font-size: 20px;
-    font-weight: 500;
+h1 {
+    margin: 10px 0;
+    font-weight: var(--medium-f-weight);
+    font-size: 30px;
+    color: var(--color-light-green);
+}
+
+.form {
+    margin: 6px 0;
+    width: 235px;
+}
+
+input {
+    margin: 6px 0;
+    border-bottom: 1px solid var(--color-light-green);
+    background-color: none;
+    font-size: 14px;
+}
+
+input:focus {
+    outline: none; 
+}
+
+.form label {
+    font-size: var(--20-px);
+    font-weight: var(--medium-f-weight);
+    font-weight: 300;
 }
 
 .error-message {
-    color: red;
+    color: var(--red);
+    margin-top: -8px;
+    font-size: 15px;
+    font-weight: var(--medium-f-weight);
 }
 
 .error {
-    border: 1px solid red;
+    border: 1px solid var(--red)
 }
 
+.btn {
+    padding: 10px 20px;
+    background-color: var(--color-light-green);
+    color: var(--white);
+    border-radius: var(--20-px);
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: var(--bold-font-n-width);
+}
+
+
+/* FORMULARIO VÁLIDO */
 .success-message {
     text-align: center;
+    max-width: 350px;
+}
+
+.success-message img {
+    max-width: 70px;
+}
+
+.success-message h2 {
+    font-size: 26px;
+    font-weight: var(--bold-font-n-width);
+    margin: 20px 0;
+    color: var(--color-light-green);
+}
+
+.success-message p {
+    font-weight: var(--medium-f-weight);
+}
+
+
+/* RESPONSIVE */
+@media (max-width: 752px) {
+    .container {
+        max-height: 100%;
+    }
+
+    .form-sign-up {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .form {
+        width: 260px;
+    }
+}
+
+@media (max-width: 425px) {
+    .container {
+        max-width: 250px;
+    }
+
+    .form-sign-up img {
+        width: 100%;
+    }
 }
